[project]
name = "implicit-constraints-demo"
version = "0.1.0"
description = "Minimal Agent-as-a-World demo with MCP-style mock tools"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
